--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "description": "Regen/Regen: Next-generation AI automation platform with full agent layer, automation workflows, Redix execution environment, and multi-browser capabilities",
   "scripts": {
     "test:all": "node scripts/test-all-functionality.js",
+    "test:suite": "node scripts/run-all-tests.js",
+    "test:suite:e2e": "node scripts/run-all-tests.js --e2e",
     "test:ai-offline": "node scripts/test-ai-offline.js",
     "test:huggingface": "node scripts/test-huggingface-integration.js",
     "test:openai": "cd apps/api && python test_openai.py",
@@ -27,7 +29,14 @@
     "build:android:setup": "npm run build && npx cap add android && npx cap sync android",
     "preview": "vite preview",
     "lint": "eslint .",
-    "test": "echo \"Error: no test specified\" && exit 0",
+    "test": "vitest run",
+    "test:unit": "vitest run",
+    "test:unit:watch": "vitest",
+    "test:unit:ui": "vitest --ui",
+    "test:unit:coverage": "vitest run --coverage",
+    "test:all": "npm run test:unit && npm run lint && npm run build && npm run audit:prod",
+    "storybook": "npx storybook dev -p 6006",
+    "storybook:build": "npx storybook build",
     "test:e2e": "playwright test --config=playwright.config.ts",
     "test:multilingual-offline": "playwright test tests/e2e/multilingual-offline.spec.ts --config=playwright.config.ts",
     "test:backend": "playwright test tests/e2e/backend-api.spec.ts --config=playwright.config.ts",
@@ -75,7 +84,6 @@
     "html-entities": "^2.5.2",
     "iconv-lite": "^0.6.3",
     "ioredis": "^5.8.2",
-    "jsdom": "^24.1.0",
     "langchain": "^1.0.4",
     "lightweight-charts": "^5.0.9",
     "lodash-es": "^4.17.21",
@@ -126,6 +134,7 @@
     "@storybook/addon-interactions": "^8.0.0",
     "@storybook/react": "^8.6.14",
     "@storybook/react-vite": "^8.0.0",
+    "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.0",
     "@types/better-sqlite3": "^7.6.13",
     "@types/jsdom": "^21.1.7",
@@ -134,6 +143,7 @@
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
+    "@vitest/ui": "^4.0.14",
     "autoprefixer": "^10.4.20",
     "axe-core": "^4.11.0",
     "concurrently": "^9.0.1",
@@ -144,6 +154,7 @@
     "http-server": "^14.1.1",
     "husky": "^9.1.7",
     "jscodeshift": "^0.15.1",
+    "jsdom": "^27.2.0",
     "lint-staged": "^16.2.7",
     "postcss": "^8.4.47",
     "prettier": "^3.6.2",
