--- a/package.json
+++ b/package.json
@@ -5,7 +5,12 @@
   "description": "Regen/Regen: Next-generation AI automation platform with full agent layer, automation workflows, Redix execution environment, and multi-browser capabilities",
   "scripts": {
     "setup:ollama": "echo 'Ollama setup: Install from https://ollama.com/download. Then run: ollama pull phi3:mini && ollama pull llava:7b'",
-    "test:all": "npm run test:unit && npm run lint && npm run build && npm run audit:prod",
+    "test:all": "npm run lint && npm run typecheck && npm run test:unit && npm run build",
+    "test:ci": "npm run lint && npm run format:check && npm run typecheck && npm run test:unit && npm run test:integration && npm run build",
+    "ci:validate": "npm run test:ci && npm run test:load",
+    "ci:full": "npm run ci:validate && npm run test:e2e",
+    "format:check": "prettier --check \"**/*.{ts,tsx,js,jsx,json,md,yml,yaml,css,scss}\"",
+    "format:write": "prettier --write \"**/*.{ts,tsx,js,jsx,json,md,yml,yaml,css,scss}\"",
     "test:performance": "node tests/performance/profile-tabs.js",
     "perf:tti": "node tests/performance/lighthouse-tti.js",
     "perf:fcp": "node tests/performance/lighthouse-fcp.js",
@@ -101,6 +106,7 @@
     "build:types:renderer": "node --max-old-space-size=4096 node_modules/typescript/bin/tsc --noEmit --project tsconfig.renderer.json",
     "build:types:server": "node --max-old-space-size=4096 node_modules/typescript/bin/tsc --noEmit --project tsconfig.server.json",
     "typecheck": "npm run build:types:renderer",
+    "type-check": "npm run typecheck",
     "typecheck:all": "npm run build:types:renderer && npm run build:types:server",
     "build:app": "cd src-tauri && cargo tauri build",
     "build:windows": "npm run build && cd src-tauri && cargo tauri build",
